# xScanner

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  config.toml.backup  customer_addresses.txt  customer_addresses_cache.json  customer_addresses_cache.json.example  test_config.toml
docker/: init-xscanner-db.sql
docs/: ARCHITECTURE.md  BACKEND_INTEGRATION_TEST.md  CHANGELOG.md  DEPLOYMENT.md  RUST_TUTORIAL.md  SEQUENCE_DIAGRAM.md  SQS_MESSAGE_FORMAT.md  TESTING_SEPOLIA.md
examples/: check_rocksdb.rs  remove_test_address.rs
src/: config.rs  lib.rs  main.rs  shutdown.rs  tasks.rs  types.rs
src/analyzer/: analyzer.rs  analyzer.rs.backup  mod.rs
src/analyzer/chains/: algorand.rs  bitcoin.rs  evm.rs  icon.rs  mod.rs  placeholders.rs  tron.rs  types.rs  utils.rs
src/coin/: coin_trait.rs  mod.rs
src/coin/aion/: client.rs  model.rs
src/coin/algorand/: client.rs  model.rs
src/coin/bitcoin/: client.rs  mod.rs  model.rs
src/coin/ethereum/: client.rs  (+1 more)
src/fetcher/: aion_fetcher.rs  algorand_fetcher.rs  bitcoin_fetcher.rs  ethereum_fetcher.rs  fetcher.rs  gxchain_fetcher.rs  icon_fetcher.rs  mod.rs  quark_fetcher.rs  runner.rs  terra_fetcher.rs  tezos_fetcher.rs  theta_fetcher.rs  tron_fetcher.rs  wayki_fetcher.rs
src/notification/: mod.rs  sqs_client.rs
src/respository/: leveldb.rs  leveldb_repo.rs  memory.rs  mod.rs  postgresql.rs  postgresql_repo.rs  rocksdb.rs  rocksdb_repo.rs  trait.rs  wrapper.rs
src/tasks/: balance_reconciliation.rs  confirmation_checker.rs  customer_address_sync.rs  mod.rs
tests/: bitcoin_it.rs  ethereum_it.rs
(+16 files in other folders)
