[package]
name = "xScaner"
version = "0.1.0"
edition = "2021"

[dependencies]

#server
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

#aws
aws-config = "1.1"
aws-sdk-sqs = "1.13"

#language
eyre = "0.6.12"

#serialize
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.133"

#db
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
rocksdb = { version = "0.22", optional = true }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
bigdecimal = "0.3"

#config
config = "0.14.1"

#log
log = "0.4"
env_logger = "0.11.5"
thiserror = "1.0"
async-trait = "0.1.88"

[features]
default = ["rocksdb-backend"]
rocksdb-backend = ["rocksdb"]
postgres-only = []
